--- a/index.html
+++ b/index.html
@@ -1,143 +1,89 @@
 <!DOCTYPE html>
-<!-- saved from url=(0060)file:///C:/Users/User/Downloads/index.html -->
-<html lang="pt-BR"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programa Corpo Livre - Calistenia</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #222;
-        }
-        header {
-            background-image: url('https://images.unsplash.com/photo-1579758629938-03607ccdbaba?auto=format&fit=crop&w=1950&q=80');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            text-align: center;
-            padding: 100px 20px;
-        }
-        header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        header p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-        header a {
-            background-color: #e63946;
-            color: white;
-            text-decoration: none;
-            padding: 15px 30px;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-        section {
-            padding: 50px 20px;
-            max-width: 900px;
-            margin: auto;
-        }
-        h2 {
-            color: #e63946;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            padding: 10px 0;
-        }
-        .cta {
-            text-align: center;
-            margin: 40px 0;
-        }
-        .cta a {
-            background-color: #1d3557;
-            color: white;
-            padding: 15px 40px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        footer {
-            background-color: #222;
-            color: #bbb;
-            text-align: center;
-            padding: 30px 10px;
-            font-size: 0.9em;
-        }
-    </style>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Corpo Livre - Calistenia</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #0a0a0a;
+      color: #f1f1f1;
+      text-align: center;
+    }
+    header {
+      background: linear-gradient(90deg, #111, #222);
+      padding: 20px;
+      text-align: center;
+      border-bottom: 2px solid #e63946;
+    }
+    h1 {
+      color: #e63946;
+      font-size: 2.5rem;
+    }
+    p {
+      margin: 20px;
+      font-size: 1.1rem;
+      color: #ccc;
+    }
+    .hero {
+      background-image: url('https://images.unsplash.com/photo-1594737625785-cbdb0b1e68c2?auto=format&fit=crop&w=1400&q=80');
+      background-size: cover;
+      background-position: center;
+      height: 80vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .hero h2 {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 15px 30px;
+      border-radius: 10px;
+      font-size: 2rem;
+      color: #fff;
+    }
+    .btn {
+      margin-top: 25px;
+      background-color: #e63946;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 5px;
+      font-size: 1.1rem;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background-color: #ff4757;
+    }
+    footer {
+      background: #111;
+      padding: 15px;
+      font-size: 0.9rem;
+      color: #777;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Corpo Livre</h1>
+    <p>Transforme seu corpo e mente através da Calistenia</p>
+  </header>
 
-<header>
-    <h1>Transforme seu corpo e sua mente com a calistenia</h1>
-    <p>Treine em qualquer lugar e descubra o poder da disciplina e do controle corporal.</p>
-    <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#">Quero começar agora</a>
-</header>
+  <section class="hero">
+    <h2>Domine o seu corpo, liberte sua mente</h2>
+    <button class="btn" onclick="window.location.href='https://wa.me/55SEUNUMEROAQUI'">Comece Agora</button>
+  </section>
 
-<section>
-    <h2>O que você vai conquistar</h2>
-    <ul>
-        <li>✅ Evolua do zero até movimentos avançados com segurança</li>
-        <li>✅ Aumente força, resistência e coordenação</li>
-        <li>✅ Corrija postura e melhore o controle corporal</li>
-        <li>✅ Treinos práticos, com vídeos explicativos</li>
-        <li>✅ Resultados reais em poucas semanas</li>
-    </ul>
-</section>
-
-<section>
-    <h2>Como funciona o programa</h2>
-    <p>Nosso programa é estruturado em fases progressivas, que se adaptam ao seu nível — do iniciante ao intermediário.
-    Cada treino foi planejado para desenvolver força e mobilidade de forma equilibrada, usando apenas o peso do corpo.</p>
-    <ul>
-        <li>Acesso vitalício às aulas</li>
-        <li>Suporte via grupo exclusivo</li>
-        <li>Planilha semanal de treinos</li>
-        <li>Acompanhamento para evolução segura</li>
-    </ul>
-    <div class="cta">
-        <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#">Quero meu acesso agora</a>
-    </div>
-</section>
-
-<section>
-    <h2>Resultados reais</h2>
-    <blockquote>“Nunca imaginei que conseguiria fazer barras e planchas. A metodologia é clara e eficiente!” — André M.</blockquote>
-    <blockquote>“Em 30 dias senti uma diferença absurda no corpo e na minha confiança.” — Camila S.</blockquote>
-    <blockquote>“A calistenia mudou meu jeito de treinar — hoje treino porque amo.” — Lucas T.</blockquote>
-</section>
-
-<section>
-    <h2>Comece hoje</h2>
-    <p>Por tempo limitado, o Programa Corpo Livre está disponível com <strong>50% de desconto</strong>.
-    Garanta agora o seu acesso e comece a treinar ainda hoje — do zero, em casa ou ao ar livre.</p>
-    <div class="cta">
-        <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#">Quero garantir minha vaga</a>
-    </div>
-</section>
-
-<section>
-    <h2>Domine corpo e mente</h2>
-    <p>Você não precisa de equipamentos caros. Não precisa de academia. Precisa apenas da decisão de começar.</p>
-    <p>A calistenia vai muito além do físico — é sobre dominar o corpo e fortalecer a mente.</p>
-    <div class="cta">
-        <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#">Começar agora o Programa Corpo Livre</a>
-    </div>
-</section>
-
-<footer>
-    © 2025 Corpo Livre — Todos os direitos reservados<br>
-    <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#" style="color:#bbb;">Política de privacidade</a> | 
-    <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#" style="color:#bbb;">Termos de uso</a> | 
-    <a href="file:///C:/Users/User/Downloads/landing_page_calistenia.html#" style="color:#bbb;">Contato</a>
-</footer>
-
-
-
-</body></html>
+  <footer>
+    <p>© 2025 Corpo Livre | Calistenia e Liberdade</p>
+  </footer>
+</body>
+</html>
