--- a/index.html
+++ b/index.html
@@ -1,198 +1,321 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Corpo Livre - Calistenia</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Corpo Livre | Calistenia</title>
+
+  <!-- Fonte e ícones -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
     body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #0a0a0a;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #000;
       color: #fff;
       overflow-x: hidden;
     }
 
-    /* Cabeçalho fixo */
     header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.9);
+      height: 100vh;
+      background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), 
+                  url('https://images.unsplash.com/photo-1594737625785-cbdb0b9a5d37?auto=format&fit=crop&w=1600&q=80') center/cover;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      padding: 15px 40px;
-      z-index: 1000;
-      backdrop-filter: blur(10px);
-      border-bottom: 2px solid #e63946;
+      text-align: center;
+      padding: 0 20px;
+      opacity: 0;
+      transform: translateY(30px);
+      animation: fadeUp 1.5s ease forwards;
     }
 
     header h1 {
-      color: #e63946;
-      font-size: 1.6rem;
-      font-weight: bold;
-      letter-spacing: 1px;
+      font-size: 3rem;
+      color: #FFD700;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
 
-    nav a {
-      color: #f1f1f1;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 1rem;
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: #e63946;
-    }
-
-    /* Hero */
-    .hero {
-      height: 100vh;
-      background: url('https://images.unsplash.com/photo-1594737625785-cbdb0b1e68c2?auto=format&fit=crop&w=1400&q=80') no-repeat center center/cover;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 0 20px;
-      animation: fadeIn 1.5s ease;
-    }
-
-    .hero h2 {
-      font-size: 2.5rem;
-      margin-bottom: 15px;
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 10px 25px;
-      border-radius: 10px;
-    }
-
-    .hero p {
+    header p {
       font-size: 1.2rem;
+      margin: 20px 0;
       max-width: 600px;
-      color: #ddd;
-      margin-bottom: 25px;
     }
 
-    .btn {
-      background-color: #e63946;
-      padding: 12px 25px;
-      border: none;
-      border-radius: 6px;
-      font-size: 1.1rem;
-      color: white;
-      cursor: pointer;
-      transition: 0.3s;
+    header a {
+      background-color: #FFD700;
+      color: #000;
+      padding: 15px 30px;
+      text-decoration: none;
+      border-radius: 30px;
+      font-weight: bold;
+      transition: all 0.3s;
+      animation: pulse 2s infinite;
     }
 
-    .btn:hover {
-      background-color: #ff4f5a;
+    header a:hover {
+      background-color: #fff;
       transform: scale(1.05);
     }
 
-    /* Seção sobre */
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(255, 215, 0, 0.6); }
+      70% { box-shadow: 0 0 0 15px rgba(255, 215, 0, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(255, 215, 0, 0); }
+    }
+
     section {
       padding: 80px 20px;
-      max-width: 900px;
-      margin: auto;
       text-align: center;
+      max-width: 1000px;
+      margin: auto;
+      opacity: 0;
+      transform: translateY(50px);
+      transition: all 1s ease;
     }
 
-    section h3 {
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    section h2 {
+      color: #FFD700;
+      margin-bottom: 30px;
       font-size: 2rem;
-      color: #e63946;
-      margin-bottom: 20px;
+      text-transform: uppercase;
     }
 
-    section p {
-      color: #ccc;
-      line-height: 1.7;
+    .planos, .depoimentos-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .plano, .depoimento {
+      background-color: #111;
+      border: 1px solid #FFD700;
+      border-radius: 10px;
+      width: 280px;
+      padding: 30px;
+      transition: transform 0.3s;
+    }
+
+    .plano:hover, .depoimento:hover {
+      transform: translateY(-10px);
+    }
+
+    .plano h3 {
+      color: #FFD700;
+      margin-bottom: 15px;
+    }
+
+    .depoimento img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 2px solid #FFD700;
+      margin-bottom: 15px;
+    }
+
+    .depoimento h4 {
+      color: #FFD700;
+      margin-bottom: 10px;
       font-size: 1.1rem;
     }
 
-    /* Rodapé */
-    footer {
-      background: #111;
-      text-align: center;
-      padding: 20px;
-      color: #888;
-      font-size: 0.9rem;
-      margin-top: 50px;
+    .depoimento p {
+      font-size: 0.95rem;
+      color: #ccc;
+      font-style: italic;
     }
 
-    /* Animação */
-    @keyframes fadeIn {
+    /* ANIMAÇÃO DOS DEPOIMENTOS */
+    .depoimento {
+      opacity: 0;
+      transform: translateX(-60px);
+      transition: all 1s ease;
+    }
+
+    .depoimento.visible-left {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .depoimento:nth-child(even) {
+      transform: translateX(60px);
+    }
+
+    .depoimento.visible-right {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .contato a {
+      display: inline-block;
+      margin-top: 20px;
+      background-color: #FFD700;
+      color: #000;
+      padding: 12px 25px;
+      border-radius: 25px;
+      text-decoration: none;
+      transition: all 0.3s;
+      font-weight: bold;
+    }
+
+    .contato a:hover {
+      background-color: #fff;
+      color: #000;
+    }
+
+    footer {
+      background-color: #111;
+      padding: 40px 20px;
+      text-align: center;
+      border-top: 1px solid #333;
+      color: #aaa;
+    }
+
+    footer .social {
+      margin-bottom: 15px;
+    }
+
+    footer a {
+      color: #FFD700;
+      text-decoration: none;
+      margin: 0 10px;
+      font-size: 1.5rem;
+      transition: color 0.3s, transform 0.3s;
+    }
+
+    footer a:hover {
+      color: #fff;
+      transform: scale(1.2);
+    }
+
+    footer p {
+      font-size: 0.9rem;
+      color: #777;
+    }
+
+    @keyframes fadeUp {
       from {
         opacity: 0;
-        transform: translateY(20px);
+        transform: translateY(40px);
       }
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
-
-    /* Responsividade */
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-      }
-
-      nav a {
-        margin: 10px;
-      }
-
-      .hero h2 {
-        font-size: 1.8rem;
-      }
-
-      .hero p {
-        font-size: 1rem;
-      }
-    }
   </style>
 </head>
 <body>
-  <header>
+
+  <header id="inicio">
     <h1>Corpo Livre</h1>
-    <nav>
-      <a href="#sobre">Sobre</a>
-      <a href="#beneficios">Benefícios</a>
-      <a href="#contato">Contato</a>
-    </nav>
+    <p>Transforme seu corpo e mente através da Calistenia</p>
+    <a href="#planos">Comece Agora</a>
   </header>
 
-  <section class="hero">
-    <h2>Domine o seu corpo, liberte sua mente</h2>
-    <p>A Calistenia é mais do que um treino — é um estilo de vida que transforma força, foco e liberdade.</p>
-    <button class="btn" onclick="window.location.href='https://wa.me/55SEUNUMEROAQUI'">Comece Agora</button>
-  </section>
-
   <section id="sobre">
-    <h3>O que é Calistenia?</h3>
-    <p>A calistenia utiliza o peso do próprio corpo para desenvolver força, equilíbrio e consciência corporal. É um treino funcional, acessível e extremamente eficaz para qualquer nível.</p>
+    <h2>Sobre</h2>
+    <p>A Corpo Livre é mais do que um método de treino — é um estilo de vida. Aqui, acreditamos que a força e a liberdade vêm do controle do próprio corpo. 
+    Nossa missão é transformar você física e mentalmente através da calistenia, com treinos funcionais e progressivos.</p>
   </section>
 
-  <section id="beneficios">
-    <h3>Benefícios</h3>
-    <p>Melhora a mobilidade, define os músculos, aumenta o controle corporal e fortalece a mente. Tudo isso sem depender de equipamentos caros ou academias lotadas.</p>
+  <section id="planos">
+    <h2>Planos</h2>
+    <div class="planos">
+      <div class="plano">
+        <h3>Iniciante</h3>
+        <p>Domine os fundamentos da calistenia com segurança e técnica.</p>
+      </div>
+      <div class="plano">
+        <h3>Intermediário</h3>
+        <p>Desenvolva força, equilíbrio e controle corporal.</p>
+      </div>
+      <div class="plano">
+        <h3>Avançado</h3>
+        <p>Desafie seus limites com treinos de alto nível e movimentos complexos.</p>
+      </div>
+    </div>
   </section>
 
-  <section id="contato">
-    <h3>Entre em Contato</h3>
-    <p>Quer começar sua jornada? Fale comigo no WhatsApp e receba um plano de treino personalizado.</p>
-    <button class="btn" onclick="window.location.href='https://wa.me/55SEUNUMEROAQUI'">Falar no WhatsApp</button>
+  <section id="depoimentos">
+    <h2>Depoimentos</h2>
+    <div class="depoimentos-container">
+      <div class="depoimento">
+        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Aluno 1">
+        <h4>João Mendes</h4>
+        <p>"Comecei sem conseguir fazer uma flexão. Hoje já faço muscle-ups! Corpo Livre mudou minha visão sobre treino."</p>
+      </div>
+      <div class="depoimento">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Aluna 2">
+        <h4>Marina Costa</h4>
+        <p>"A liberdade e confiança que conquistei com a calistenia são indescritíveis. A metodologia é incrível."</p>
+      </div>
+      <div class="depoimento">
+        <img src="https://randomuser.me/api/portraits/men/54.jpg" alt="Aluno 3">
+        <h4>Ricardo Alves</h4>
+        <p>"Os treinos são desafiadores e motivadores. Cada progresso é uma vitória. Recomendo de olhos fechados."</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contato" class="contato">
+    <h2>Contato</h2>
+    <p>Quer dar o próximo passo? Fale conosco agora mesmo.</p>
+    <a href="https://wa.me/5543999884784" target="_blank">Falar no WhatsApp</a>
   </section>
 
   <footer>
-    <p>© 2025 Corpo Livre | Desenvolvido por Thiago Vasconcelos</p>
+    <div class="social">
+      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a href="https://wa.me/5543999884784" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <p>© 2025 Corpo Livre. Todos os direitos reservados.</p>
   </footer>
+
+  <script>
+    const sections = document.querySelectorAll("section");
+    const depoimentos = document.querySelectorAll(".depoimento");
+
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+        }
+      });
+    }, { threshold: 0.2 });
+
+    sections.forEach(section => observer.observe(section));
+
+    const depoObserver = new IntersectionObserver(entries => {
+      entries.forEach((entry, index) => {
+        if (entry.isIntersecting) {
+          if (index % 2 === 0) {
+            entry.target.classList.add("visible-left");
+          } else {
+            entry.target.classList.add("visible-right");
+          }
+        }
+      });
+    }, { threshold: 0.3 });
+
+    depoimentos.forEach(dep => depoObserver.observe(dep));
+  </script>
 </body>
 </html>
